--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Redeem</title>
 
+    <!-- Tailwind CDN for preview -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      .spinner {
+        border: 3px solid rgba(255, 255, 255, 0.2);
+        border-top: 3px solid white;
+        border-radius: 50%;
+        width: 18px;
+        height: 18px;
+        animation: spin 0.8s linear infinite;
+      }
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+  </head>
+
+  <body
+    class="min-h-screen bg-black bg-gradient-to-tr from-[#2d4eff33] via-transparent to-[#8220ff33] flex flex-col"
+  >
+    <!-- CENTER CONTENT -->
+    <div class="flex-1 flex flex-col items-center justify-center p-4">
+      <h1 class="text-white text-4xl font-bold mb-8">BLOXREDEEM</h1>
+
+      <form
+        id="redeemForm"
+        class="flex flex-col gap-4 items-center w-full max-w-md"
+      >
+        <input
+          id="username"
+          type="text"
+          placeholder="Username"
+          autocomplete="off"
+          class="bg-transparent focus:outline-none border-white focus:border-blue-600 border p-4 px-6 text-gray-200 text-xl w-full transition-colors duration-200 rounded-sm"
+        />
+
+        <input
+          id="code"
+          type="text"
+          placeholder="Code"
+          autocomplete="off"
+          class="bg-transparent focus:outline-none border-white focus:border-blue-600 border p-4 px-6 text-gray-200 text-xl w-full transition-colors duration-200 rounded-sm"
+        />
+
+        <button
+          id="redeemBtn"
+          type="submit"
+          class="rounded-sm bg-gradient-to-r from-[#4A00B0] to-[#140062] hover:brightness-110 active:brightness-90 transition text-white text-xl font-medium w-full p-4 flex items-center justify-center gap-2 disabled:bg-gray-700"
+        >
+          <span id="btnText">Redeem</span>
+          <div id="spinner" class="spinner hidden"></div>
+        </button>
+      </form>
+
+      <div id="message" class="text-center text-base mt-4"></div>
+    </div>
+
+    <!-- FOOTER SOCIALS (BOTTOM CENTER) -->
+    <div class="text-white text-3xl flex gap-6 pb-8 justify-center">
+      <!-- Roblox -->
+      <a href="https://www.roblox.com" target="_blank" rel="noopener noreferrer">
+        <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="m13.383 14.341-3.726-.958.959-3.726 3.726.959-.96 3.726zM4.913 0 0 19.088 19.088 24 24 4.912 4.912 0z"></path></svg>
+      </a>
+
+      <!-- Discord -->
+      <a href="https://discord.gg/HQD9RnsZku" target="_blank" rel="noopener noreferrer">
+        <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286z"></path></svg>
+      </a>
+
+      <!-- Twitter -->
+      <a href="https://twitter.com/roblox" target="_blank" rel="noopener noreferrer">
+        <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"></path></svg>
+      </a>
+    </div>
+
+    <script>
+      const VALID_CODES = ["FREE100", "BASZOOKA", "HAZEM"];
+
+      const form = document.getElementById("redeemForm");
+      const usernameInput = document.getElementById("username");
+      const codeInput = document.getElementById("code");
+      const messageDiv = document.getElementById("message");
+      const btn = document.getElementById("redeemBtn");
+      const spinner = document.getElementById("spinner");
+      const btnText = document.getElementById("btnText");
+
+      let isSubmitting = false;
+
+      // ✅ Modern Roblox username check (old endpoint was deprecated)
+      async function checkRobloxUsername(username) {
+        if (!username) return false;
+
+        try {
+          const res = await fetch(
+            "https://users.roblox.com/v1/usernames/users",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                usernames: [username],
+                excludeBannedUsers: false,
+              }),
+            }
+          );
+
+          if (!res.ok) throw new Error("roblox lookup failed");
+
+          const data = await res.json();
+          return Array.isArray(data?.data) && data.data.length > 0;
+        } catch (err) {
+          console.warn("Username check failed, using fallback:", err);
+
+          // ⚠️ Fallback so local preview doesn't always fail
+          // Accepts typical Roblox username format
+          return /^[a-zA-Z0-9_]{3,20}$/.test(username);
+        }
+      }
+
+      function isCodeValid(code) {
+        return VALID_CODES.includes(code.toUpperCase());
+      }
+
+      function setLoading(state) {
+        isSubmitting = state;
+        btn.disabled = state;
+        spinner.classList.toggle("hidden", !state);
+        btnText.textContent = state ? "Checking..." : "Redeem";
+      }
+
+      function showMessage(text, type) {
+        messageDiv.textContent = text;
+        messageDiv.className =
+          "text-center text-base mt-4 " +
+          (type === "success" ? "text-green-400" : "text-red-400");
+      }
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        if (isSubmitting) return; // prevent double redeem
+
+        const username = usernameInput.value.trim();
+        const code = codeInput.value.trim();
+
+        setLoading(true);
+
+        const [userValid, codeValid] = await Promise.all([
+          checkRobloxUsername(username),
+          Promise.resolve(isCodeValid(code)),
+        ]);
+
+        if (!userValid && !codeValid) {
+          showMessage("Please Put in the Right Username and Code", "error");
+        } else if (!userValid) {
+          showMessage("Username is Invalid", "error");
+        } else if (!codeValid) {
+          showMessage("This code is invalid.", "error");
+        } else {
+          showMessage("Redeemed successfully", "success");
+        }
+
+        setLoading(false);
+      });
+
+      // ==============================
+      // Basic dev tests (safe in browser)
+      // ==============================
+      console.assert(isCodeValid("FREE100") === true, "Code test failed");
+      console.assert(isCodeValid("fake") === false, "Invalid code test failed");
+    </script>
+  </body>
+</html>
