--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   >
     <!-- CENTER CONTENT -->
     <div class="flex-1 flex flex-col items-center justify-center p-4">
-      <img src="https://cdn.discordapp.com/attachments/1476265913589432452/1476506354536681533/Gemini_Generated_Image_gcbpkogcbpkogcbp-removebg-preview.png?ex=69a15f33&is=69a00db3&hm=667050981d306725dbf6ccd3c5d0747acb3f1417ec0f57a59f175a018b939350" alt="BLOXREDEEM" class="h-20 mb-8" />
-
+      <img src="https://media.discordapp.net/attachments/1476265913589432452/1476908123573850254/43cb4cc9-befd-48a0-82b6-ad47dfb1282e.png?ex=69a2d560&is=69a183e0&hm=caabfbd7eea51675b34f1ab46ee45de252a624368c0dd21d1a38e9c6d7c5e274&=&format=webp&quality=lossless
       <form
         id="redeemForm"
         class="flex flex-col gap-4 items-center w-full max-w-md"
