--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redeem / Bloxredeem.ggs</title>
-    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1476265913589432452/1476908123573850254/43cb4cc9-befd-48a0-82b6-ad47dfb1282e.png?ex=69a2d560&is=69a183e0&hm=caabfbd7eea51675b34f1ab46ee45de252a624368c0dd21d1a38e9c6d7c5e274&=&format=webp&quality=lossless
+    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1476265913589432452/1476514163491602442/Untitled_design.png?ex=69a2b7f8&is=69a16678&hm=8cb80e8bd0a23a66be6c12f3c8aafd98c3ae4035bfb076af123ebde8d51edb14&=&format=webp&quality=lossless&width=873&height=873
     <!-- Tailwind CDN for preview -->
     <script src="https://cdn.tailwindcss.com"></script>
 
