--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redeem / Bloxredeem.ggs</title>
-    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1476265913589432452/1476514163491602442/Untitled_design.png?ex=69a2b7f8&is=69a16678&hm=8cb80e8bd0a23a66be6c12f3c8aafd98c3ae4035bfb076af123ebde8d51edb14&=&format=webp&quality=lossless&width=873&height=873
+    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1476265913589432452/1476514163491602442/Untitled_design.png?ex=69a16678&is=69a014f8&hm=66a7da10f5660ec5e06e55afc2ee136e8869b42c2013f375948a4d4b4c4e1379&=&format=webp&quality=lossless&width=873&height=873" />
+
     <!-- Tailwind CDN for preview -->
     <script src="https://cdn.tailwindcss.com"></script>
 
