--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redeem / Bloxredeem.ggs</title>
+    <title>Redeem / Bloxredeem</title>
     <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1476265913589432452/1476514163491602442/Untitled_design.png?ex=69a16678&is=69a014f8&hm=66a7da10f5660ec5e06e55afc2ee136e8869b42c2013f375948a4d4b4c4e1379&=&format=webp&quality=lossless&width=873&height=873" />
 
     <!-- Tailwind CDN for preview -->
